# task-manager-crud

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: pokemon.py  tasks.py
backend/app/database/: database.py
backend/app/models/: task.py
backend/app/repositories/: pokemon_client.py  task_repository.py
backend/app/schemas/: pokemon.py  task.py
backend/app/services/: pokemon_service.py  task_service.py
backend/test/: test_tasks.py
frontend/: .env.example  .gitignore  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/kotlin/com/supervisa/daldeos/task_manager_client/: MainActivity.kt
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/abstractions/: supervisa_task_api_abstraction.dart
frontend/lib/core/: theme.dart
frontend/lib/models/: pokemon_model.dart  task_model.dart
frontend/lib/viewmodels/: pokemon_viewmodel.dart  task_view_model.dart
frontend/lib/views/: create_task_view.dart  home_view.dart  insights_view.dart  pokemon_view.dart  task_details_view.dart
frontend/lib/widgets/: task_card_widget.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: task_view_model_test.dart  widget_test.dart
frontend/windows/runner/: Runner.rc
